--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.jetbrains:annotations:22.0.0'
+	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.2.3'
+
+
 }
 
 tasks.named('test') {
